# mikuinvidious

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  Caddyfile  Caddyfile.example  Dockerfile  GEMINI.md  README.md  app.py  app.yaml  bbapi.py  compose.yml  conf.py.sample  config.toml.sample  docker-entrypoint.sh  extra.py  filters.py  htmlp.py  main.py  manage_quic.sh  nginx.conf  nginx.conf.template  package-lock.json  package.json  proxy.py  pyproject.toml  repro_disconnect.py  requirements.txt  res.py  shared.py  tailwind.config.js  transformers.py  unit_config.json  views.py
.Jules/: palette.md  scribe.md
.github/workflows/: docker.yml
doc/: ACKNOWLEDGEMENT.md  configuration.md  keep-alive.md  live-logic.md  minimal-setup-zh.md  minimal-setup.md  non-docker.md  production-zh.md  production.md  run-zh-CN.md  run.md  setup-zh-TW.md  setup-zh.md  setup.md  stability-fixes.md
python/: app.py  csrf.py  danmaku.py  dash_proxy.py  debug_live_quality.py  extra.py  filters.py  live_manager.py  main.py  nyaa.py  proxy.py  proxy_utils.py  rate_limit.py  refresher.py  res.py  secrets_encryption.py  shared.py  stream.py  ticket_legacy.py  transformers.py  view_utils.py  views.py  views_bangumi.py
static/css/: video.css
static/danmakujs/: danmaku.canvas.min.js  danmaku.dom.min.js  danmaku.min.js
static/js/: common.js  video.js
static/rules/: robots_relaxed.txt
static/themes/modern/css/: default.css  embed.css  main.css  player.css  pure-min.css  search.css
static/themes/modern/js/: _helpers.js  audioplayer.js  player.js  themes.js
static/themes/wayback/css/: default.css  embed.css  player.css  search.css
static/themes/wayback/js/: _helpers.js  audioplayer.js  player.js  themes.js
static/vjs/: media-chrome.js  video.min.js  videojs-resolution-switcher.js
templates/: fans.html  index.html  macros.html  read.html  search.html  space.html  toolbar.html  video.html
templates/themes/modern/: author.html  bangumi_index.html  bangumi_view.html  base.html  error.html  home.html  licenses.html  login.html  pref.html  read.html  search.html  search_article.html  search_user.html  space.html  video.html  video_listen.html  zone.html
templates/themes/modern/components/: meta_part.html  nyaa_part.html  nyaa_sidebar.html  player_part.html
templates/themes/wayback/: author.html  base.html  error.html  home.html  licenses.html  login.html  pref.html  read.html  search.html  search_article.html  search_user.html  space.html  video.html  video_listen.html  zone.html
tools/: PROPOSAL_IP_ROTATOR.md  botPolicy.yaml.example  encrypt_secrets.py
tools/miku-proxy-rotator/: Dockerfile  README.md  go.mod  go.sum  main.go
tools/warp/: compose.yml  compose.yml.example
